# real-state-alpes

./: .gitignore  .gitpod.yml  README.md  bff.Dockerfile  company_data_auditor.Dockerfile  company_data_collector.Dockerfile  company_data_presenter.Dockerfile  company_data_processor.Dockerfile  docker-compose.yml  notificator-requirements.txt  notificator.Dockerfile  pyproject.toml  requirements.txt  rs-alpes.Dockerfile
.github/workflows/: dev.yml  test-build-deploy.yml
aws/: main.tf  terraform.tfvars
aws/modules/ecs/: main.tf
src/bff/: consumers.py  dispatchers.py  main.py  utils.py
src/bff/api/v1/: mutations.py  queries.py  router.py  schemes.py
src/company_data_auditor/: Dockerfile  README.md  main.py  requirements.txt
src/company_data_auditor/api/v1/: router.py
src/company_data_auditor/config/: api.py  db.py
src/company_data_auditor/modulos/aplicacion/: handlers.py
src/company_data_auditor/modulos/dominio/: entidades.py  eventos.py  objetos_valor.py  repositorios.py
src/company_data_auditor/modulos/infraestructura/: __init__.py  consumidores.py  despachadores.py  (+1 more)
src/company_data_collector/: README.md
src/company_data_collector/api/: __init__.py  company.py
src/company_data_collector/config/: db.py  uow.py
src/company_data_presenter/: README.md
src/company_data_presenter/api/: __init__.py  company.py
src/company_data_presenter/config/: uow.py
src/company_data_processor/: README.md
src/company_data_processor/api/: __init__.py  company.py
src/company_data_processor/config/: uow.py
src/notificator/: README.md  main.py
(+115 files in other folders)
